[gd_scene format=3 uid="uid://wirepath_scene"]

[ext_resource type="Script" path="res://Scripts/WirePath.gd" id="1_wirepath"]
[ext_resource type="Script" path="res://Scripts/WireEnd.gd" id="2_wireend"]

[sub_resource type="Curve2D" id="Curve2D_default"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, -150, 0, 150, 200, -100, 0, 150, 0, -150, 400, 0)
}
point_count = 3

[sub_resource type="CircleShape2D" id="CircleShape2D_a"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b"]
radius = 60.0

[node name="WirePath" type="Node2D"]
script = ExtResource("1_wirepath")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_default")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
progress_ratio = 0.0

[node name="EndA" type="Area2D" parent="."]
position = Vector2(0, 0)
collision_layer = 0
collision_mask = 1
script = ExtResource("2_wireend")
is_start = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndA"]
shape = SubResource("CircleShape2D_a")

[node name="Prompt" type="Label" parent="EndA"]
visible = false
offset_left = -40.0
offset_top = -90.0
offset_right = 60.0
offset_bottom = -70.0
text = "[E] Enter Wire"

[node name="EndB" type="Area2D" parent="."]
position = Vector2(400, 0)
collision_layer = 0
collision_mask = 1
script = ExtResource("2_wireend")
is_start = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndB"]
shape = SubResource("CircleShape2D_b")

[node name="Prompt" type="Label" parent="EndB"]
visible = false
offset_left = -40.0
offset_top = -90.0
offset_right = 60.0
offset_bottom = -70.0
text = "[E] Enter Wire"
